[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
derive_builder = "0.12.0"
prost = "0.11.3"
prost-types = "0.11.2"
regex = "1.7.0"
serde = "1.0.152"
serde_yaml = "0.9.16"
sqlx = "0.6.2"
thiserror = "1.0.38"
tonic = { version = "0.8.3", features = ["gzip"] }

[build-dependencies]
prost-build = "0.11.5"
proto-builder-trait = "0.2.0"
tonic-build = "0.8.4"
