[package]
name = "reservation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test_utils = []

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.68"
futures = { version = "0.3.25", default-features = false }
reservation = { version = "0.1.0", path = "../reservation" }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
shellexpand = "3.0.0"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
tonic = { version = "0.8.3", features = ["tokio-rustls", "gzip"] }

[dev-dependencies]
lazy_static = "1.4.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
sqlx-postgres-tester = "0.1.1"
